# io-samurai

./: .gitignore  .gitignore.save  README.md  license.txt  readme.md
docs/: pinout.md  ratings.md  user-guide-io-samurai-hal.md  user-guide.md
firmware/pico/: sh1106.c
firmware/pico/inc/: main.h  sh1106.h
firmware/pico2-W5500-Lite/: README.md
firmware/w5100s-evb-pico/: CMakeLists.txt  config.c  main.c
firmware/w5100s-evb-pico/inc/: config.h  jump_table.h  main.h  serial_terminal.h  sh1106.h
firmware/w5100s-evb-pico/src/: config.c  main.c  serial_terminal.c  sh1106.c  teszt_.py
hal-driver/: install.sh  io-samurai.c  io-samurai.hal
hardware/: #auto_saved_files#  io-samurai.kicad_pcb  io-samurai.kicad_pcb_bom.csv  io-samurai.kicad_pcb_positions.csv  io-samurai.kicad_prl  io-samurai.kicad_pro  io-samurai.kicad_sch  ~io-samurai.kicad_sch.lck
non_realtime/: README.md  build_example.sh  io-samurai.cpp  io-samurai.h  usage_example  usage_example.cpp
python-lib/: io_samurai.py  python_minimal.py  test-analog.py  test_iosamurai.py
utility/: benchmark.c  io_samurai.py  jump_table.py  python_minimal.py  test-analog-x2.py  test_iosamurai.py
